Fix navbar z-index

--- a/less/styles-ls2.less
+++ b/less/styles-ls2.less
@@ -229,7 +229,7 @@ header{
     height: 98px;
     padding-bottom: 26px;
     padding-top: 26px;
-
+    z-index: 5;
     @media (max-width: @screen-xs-max){
         padding: 3px 6px;
     }
